@@ -61,7 +61,12 @@ namespace VisualCCommon
             settingsGroup.AddSetting("AdditionalLibraryDirectories", settings.LibraryPaths, condition);
             settingsGroup.AddSetting("AdditionalDependencies", settings.Libraries, condition);
 
-            settingsGroup.AddSetting("GenerateDebugInformation", settings.DebugSymbols.GetValueOrDefault(false), condition);
+            if (settings.DebugSymbols.HasValue && settings.DebugSymbols.Value)
+            {
+                settingsGroup.AddSetting("GenerateDebugInformation", true, condition);
+                module.GeneratedPaths.Add(C.ConsoleApplication.PDBKey, module.CreateTokenizedString("@changeextension($(0), $(pdbext))", module.GeneratedPaths[C.ConsoleApplication.Key]));
+                settingsGroup.AddSetting("ProgramDatabaseFile", module.GeneratedPaths[C.ConsoleApplication.PDBKey], condition);
+            }
         }
     }
 }
